BUG:Hiding correct fields where visibility was not working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 .letter-choice {
     margin-right: 10px;
     margin-left: 10px;
-    visibility: visible;
+    display: block;
 }
 
 #letter-buttons {
@@ -55,7 +55,7 @@ body {
 #timer-box {
     text-align: center;
     padding-top: 5%;
-    display: none;
+    display:none;
 }
 
 #counter {
@@ -128,8 +128,8 @@ body {
     font-weight: 600;
     margin: 2%;
     border: 5px solid #0d070c;
-    display: none;
     padding: 2rem;
+    display: none;
 }
 
 /*DETAILED INSTRUCTIONS*/
